file-favorite-service/k8/k8.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-favorite
  labels:
    app: file-favorite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-favorite
  template:
    metadata:
      labels:
        app: file-favorite
    spec:
      containers:
      - name: file-favorite
        image: registry.cloud.sdu.dk/sdu-cloud/file-favorite-service:1.4.0-SUBS.0
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        - --config-dir
        - /etc/psql
        volumeMounts:
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/psql
          name: psql
        - mountPath: /etc/token-validation
          name: token-validation
      volumes:
      - name: refresh-token
        secret:
          optional: false
          secretName: file-favorite-refresh-token
      - name: psql
        secret:
          optional: false
          secretName: file-favorite-psql
      - name: token-validation
        configMap:
          name: token-validation

      imagePullSecrets:
        - name: esci-docker
