file-favorite-service/k8/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: file-favorite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""
spec:
  rules:
  - host: cloud.sdu.dk
    http:
      paths:
      - path: /api/files/favorite
        backend:
          serviceName: file-favorite
          servicePort: 8080
